# vacs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  policy.toml  release-please-config.json  releases.toml
vacs-audio/: CHANGELOG.md  Cargo.toml
vacs-audio/src/: config.rs  device.rs  dsp.rs  error.rs  input.rs  lib.rs  mixer.rs  output.rs  sources.rs  stream.rs
vacs-audio/src/sources/: opus.rs  waveform.rs
vacs-audio/src/stream/: capture.rs  playback.rs
vacs-audio/tests/: waveform.rs
vacs-client/: .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  Info.plist  build.rs  package-lock.json  package.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  vacs.key  vacs.key.pub
vacs-client/capabilities/: default.json
vacs-client/docs/: config.md  wayland.md
vacs-client/docs/config/: README.md  client.md  config.schema.json  stations.md
vacs-client/frontend/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vacs-client/frontend/icons/: icon.icns
vacs-client/frontend/src/: App.css  App.tsx  error.ts  main.tsx
vacs-client/frontend/src/components/: AudioHostSelector.tsx  CallList.tsx  CallQueue.tsx  ClientPage.tsx  Clock.tsx  DAKeyArea.tsx  DeviceSelector.tsx  DialPad.tsx  DirectAccessPage.tsx  ErrorOverlay.tsx  FallbackProfile.tsx  FunctionKeys.tsx  GeoPage.tsx  IgnoreList.tsx  InfoGrid.tsx  Tabs.tsx  TopButtonRow.tsx  TransmitModeSettings.tsx  UpdateOverlay.tsx  VolumeSettings.tsx  call-list.tsx  info-grid.tsx  top-button-row.tsx
vacs-client/frontend/src/hooks/: call-state-hook.ts  debounce-hook.ts  dial-pad-hook.ts  event-callback-hook.ts  list-hook.ts  radio-state-hook.ts  zoom-hotkey-hook.ts
vacs-client/frontend/src/listeners/: auth-listener.ts  error-listener.ts  signaling-listener.ts  webrtc-listener.ts
vacs-client/frontend/src/pages/: ConnectPage.tsx  GeoPage.tsx  LoginPage.tsx  MainPage.tsx  MissionPage.tsx  SettingsPage.tsx  TelephonePage.tsx
vacs-client/frontend/src/stores/: auth-store.ts  call-list-store.ts  call-store.ts  capabilities-store.ts  clients-store.ts  connection-store.ts  error-overlay-store.ts  profile-store.ts  (+4 more)
vacs-client/src/: app.rs  audio.rs  auth.rs  build.rs  config.rs  error.rs  keybinds.rs  lib.rs  main.rs  platform.rs  radio.rs  secrets.rs  signaling.rs  state.rs
vacs-client/src/app/: commands.rs  state.rs
vacs-client/src/audio/: commands.rs  manager.rs
vacs-client/src/auth/: commands.rs
vacs-client/src/keybinds/: commands.rs  engine.rs  runtime.rs
vacs-client/src/radio/: push_to_talk.rs  track_audio.rs
vacs-client/src/secrets/: cookies.rs
vacs-client/src/signaling/: commands.rs
vacs-protocol/: CHANGELOG.md  Cargo.toml
vacs-protocol/src/: http.rs  lib.rs  profile.rs  vatsim.rs  ws.rs
vacs-protocol/src/http/: auth.rs  version.rs  webrtc.rs  ws.rs
vacs-protocol/src/profile/: client_page.rs  geo.rs  tabbed.rs
vacs-protocol/src/ws/: client.rs  server.rs  shared.rs
vacs-server/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
vacs-server/src/: app.rs  auth.rs  build.rs  config.rs  dataset.rs  ice.rs  lib.rs  main.rs  metrics.rs  ratelimit.rs  release.rs  routes.rs  state.rs  store.rs  ws.rs
vacs-server/src/auth/: users.rs
vacs-server/src/http/: error.rs
vacs-server/src/ice/: provider.rs
vacs-server/src/metrics/: guards.rs  labels.rs
vacs-server/src/release/: catalog.rs  policy.rs
vacs-server/src/routes/: admin.rs  auth.rs  debug.rs  root.rs  version.rs  webrtc.rs  ws.rs
vacs-server/src/state/: calls.rs  client.rs  clients.rs
vacs-server/src/store/: memory.rs  redis.rs
vacs-server/src/test_utils/: test_app.rs  test_client.rs  ws.rs
vacs-server/src/ws/: application_message.rs  auth.rs  calls.rs  client.rs  handler.rs  message.rs  test_util.rs  traits.rs
vacs-server/tests/: auth.rs  call.rs  client.rs
vacs-server/tests/common/: mod.rs
vacs-vatsim/: CHANGELOG.md  Cargo.toml
vacs-vatsim/src/: coverage.rs  data_feed.rs  lib.rs  slurper.rs
vacs-vatsim/src/coverage/: flight_information_region.rs  network.rs  position.rs  profile.rs  station.rs  test_support.rs
vacs-vatsim/src/data_feed/: mock.rs  vatsim.rs
vacs-webrtc/: CHANGELOG.md  Cargo.toml
vacs-webrtc/src/: config.rs  error.rs  lib.rs  peer.rs  receiver.rs  sender.rs
(+121 files in other folders)
