[package]
name = "vvcs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cpal = "0.15.3"
opus = "0.3.0"
webrtc = "0.13.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bytes = "1.10.1"
base64 = "0.22.1"
hound = "3.5.1"
ogg = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
directories = "6.0.0"
env_logger = "0.11.8"
log = { version = "0.4.27", features = ["serde"] }
ringbuf = "0.4.8"
