[package]
name = "vacs-audio"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cpal = { workspace = true }
opus = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
