[package]
name = "vacs-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "ws"
path = "src/ws.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
vacs-audio = { workspace = true }
vacs-protocol = { workspace = true }
vacs-signaling = { workspace = true }
vacs-webrtc = { workspace = true }
webrtc = { workspace = true }

[lints]
workspace = true
