[package]
name = "vacs-protocol"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["http", "vatsim", "ws"]
http = ["http-webrtc"]
http-webrtc = []
vatsim = []
ws = ["vatsim"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
