[package]
name = "vacs-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
vacs-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }

[lints]
workspace = true
