[package]
name = "vacs-vatsim"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
test-utils = []
data-feed = ["dep:async-trait", "dep:parking_lot", "dep:reqwest"]
slurper = ["dep:bytes", "dep:csv", "dep:reqwest"]

[dependencies]
async-trait = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
